openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cima
spec:
  selector:
    app: cima
  ports:
    - name: http
      port: 8080
      targetPort: 8080
